Adding abdelhamid section.

--- a/css/style.css
+++ b/css/style.css
@@ -20,3 +20,8 @@
     background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);
     color: white;
 }
+
+#abdelhamid{
+    background-image: linear-gradient(to right top, #076585,#fff);
+    color: white;
+}
