--- a/css/style.css
+++ b/css/style.css
@@ -20,3 +20,10 @@
     background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);
     color: white;
 }
+
+.background 
+{
+    background: linear-gradient(-45deg, #e73c7e, #e73c7e, #23a6d5, #23d5ab);
+    color: bisque;
+    text-align:center;
+}
